# dimensioner

./: README.md  shell.nix
adapter/: .#Cargo.toml  Cargo.toml
adapter/src/: lib.rs  math.rs  net.rs  util.rs  worldgen.rs
client-bevy/: Cargo.toml
client-bevy/src/: main.rs
client-godot4/: dimensioner_adapter.gdextension  icon.svg.import  project.godot
client-godot4/.godot/: extension_list.cfg
client-godot4/.godot/editor/: create_recent.Node  editor_layout.cfg  filesystem_cache8  filesystem_update4  player.tscn-editstate-60191d8570ad6bb283e7c30c15192e69.cfg  player.tscn-folding-60191d8570ad6bb283e7c30c15192e69.cfg  project_metadata.cfg  recent_dirs  root.tscn-editstate-9a2759c6d619d2753cab018ee951808e.cfg  root.tscn-folding-9a2759c6d619d2753cab018ee951808e.cfg  script_editor_cache.cfg  terrain.tscn-editstate-0c2f8bfdd29529007b26205b3204d68d.cfg  terrain.tscn-folding-0c2f8bfdd29529007b26205b3204d68d.cfg
client-godot4/materials/terrain/: terrain.tres
client-godot4/scenes/: root.tscn
client-godot4/scenes/entities/: player.tscn
client-godot4/scenes/world/: terrain.gdshader  (+1 more)
client-godot4/scripts/: net.gd  terrain.gd
client-godot4/shaders/: terrain_1.gdshader
client-sdl2/: Cargo.toml
client-sdl2/src/: 7  lib.rs  main.rs  math.rs  net.rs  renderer.rs  renderer_curses.rs  renderer_opengl.rs  ui.rs  util.rs  worldgen.rs
client-sdl2/ui/: CharacterBox.toml  HUD.toml
client/src/: #main.rs#  lib.rs  main.rs  math.rs  renderer.rs  renderer_curses.rs  renderer_opengl.rs
server/: Cargo.toml  worldgen.rs
server/src/: main.rs  math.rs  util.rs  worldgen.rs
(+11 files in other folders)
