[package]
name = "dimensioner_adapter"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1", features = ["attributes", "tokio1"] }
bincode = "1.3.3"
crossbeam = "0.8.4"
gl = "0.14.0"
gnuplot = "0.0.43"
imgui = "0.10"
imgui-sdl2 = "0.15.3"
lazy_static = "1.4.0"
noise = "0.9.0"
rand = "0.8.5"
rayon = "1.10.0"
reqwest = {version = "0.12.8", features = ["json", "blocking"] }
serde = {version = "1.0.213", features = ["derive"]}
godot = { git = "https://github.com/godot-rust/gdext", branch = "master" }
serde_json = "1.0.132"
tokio = { version = "1", features = ["full"] }
image = "0.25.5"
sha2 = "0.10.8"

[dependencies.sdl2]
version = "0.36"
features = ["ttf", "image", "mixer", "gfx"]

[lib]
crate-type = ["cdylib"]  # Compile this crate to a dynamic C library.
